--- a/api/data/models.yaml
+++ b/api/data/models.yaml
@@ -95,6 +95,11 @@
       name: "Qwen-plus"
       type: "text"
       enabled: true
+    - id: "anthropic/claude-haiku-4.5"
+      provider: "openrouter"
+      name: "Claude Haiku 4.5"
+      type: "text"
+      enabled: true
 
 - id: "zenmux"
   type: "openai"
