--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -117,6 +117,7 @@ services:
     volumes:
       - es_data:/usr/share/elasticsearch/data
       - es_plugins:/usr/share/elasticsearch/plugins
+      - es_config:/usr/share/elasticsearch/config
 
   etcd:
     image: quay.io/coreos/etcd:v3.6.5
@@ -238,5 +239,6 @@ volumes:
   minio_data:
   es_data:
   es_plugins:
+  es_config:
   etcd_data:
   milvus_data:
