--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -210,6 +210,7 @@ services:
     volumes:
       - es_data:/usr/share/elasticsearch/data
       - es_plugins:/usr/share/elasticsearch/plugins
+      - es_config:/usr/share/elasticsearch/config
     networks:
       - mas-network
 
@@ -364,6 +365,7 @@ volumes:
   minio_data:
   es_data:
   es_plugins:
+  es_config:
   etcd_data:
   milvus_data:
 
