--- a/docker/nginx/nginx.conf.template
+++ b/docker/nginx/nginx.conf.template
@@ -22,22 +22,14 @@ http {
     keepalive_timeout ${NGINX_KEEPALIVE_TIMEOUT};
     client_max_body_size ${NGINX_CLIENT_MAX_BODY_SIZE};
 
+    # Docker DNS resolver for dynamic service discovery
+    resolver 127.0.0.11 valid=10s ipv6=off;
+    resolver_timeout 5s;
+
     # WebSocket support
     map $http_upgrade $connection_upgrade {
         default upgrade;
         ''      close;
-    }
-
-    upstream mas_api {
-        server api:8000;
-    }
-
-    upstream mas_api_test {
-        server api-test:8000;
-    }
-
-    upstream observe {
-        server langfuse-web:3000;
     }
 
     # Production server
@@ -54,13 +46,15 @@ http {
         # API routes -> backend
         # Rewrites /api/* to /v1/* to match FastAPI router prefix
         location /v1 {
-            proxy_pass http://mas_api;
+            set $backend_api "api:8000";
+            proxy_pass http://$backend_api;
             include /etc/nginx/proxy.conf;
         }
 
         # Frontend routes -> web
         location / {
-            proxy_pass http://observe;
+            set $backend_web "langfuse-web:3000";
+            proxy_pass http://$backend_web;
             include /etc/nginx/proxy.conf;
         }
 
@@ -84,7 +78,8 @@ http {
 
         # API routes -> test backend
         location /v1 {
-            proxy_pass http://mas_api_test;
+            set $backend_api_test "api-test:8000";
+            proxy_pass http://$backend_api_test;
             include /etc/nginx/proxy.conf;
         }
 
