--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -35,7 +35,6 @@ x-shared-var: &shared-mas-env
   TEMPORAL_PORT: ${TEMPORAL_PORT:-7233}
   AWAKENING_RETRY_INTERVAL_DAYS: ${AWAKENING_RETRY_INTERVAL_DAYS:-12}
   AWAKENING_SCAN_INTERVAL_HOURS: ${AWAKENING_SCAN_INTERVAL_HOURS:-1}
-
   # Observability
   LANGFUSE_SECRET_KEY: ${LANGFUSE_SECRET_KEY}
   LANGFUSE_PUBLIC_KEY: ${LANGFUSE_PUBLIC_KEY}
@@ -47,6 +46,8 @@ services:
     image: ${REGISTRY_URL}/api:latest
     environment:
       <<: *shared-mas-env
+      DEBUG: true
+      LOG_LEVEL: DEBUG
     depends_on: &mas-depends-on
       milvus-standalone:
         condition: service_healthy
