--- a/api/data/social_media_prompt.yaml
+++ b/api/data/social_media_prompt.yaml
@@ -149,8 +149,6 @@ moments:
     严格禁止互动的内容（直接返回空actions）：
     - 亲属去世、疾病、悲伤等个人不幸
     - 政治敏感话题、军事相关、反动言论
-    - 极度负面情绪、抱怨、争议话题
-    - 私密家庭内容、过于个人的内容
 
     适合互动的内容：
     - 正面生活分享（美食、旅行、日常）
@@ -161,7 +159,7 @@ moments:
     互动策略：
     - 仅点赞（actions: [1]）：大部分轻松内容，表示支持
     - 点赞+评论（actions: [1,2]）：特别有趣或值得回应的内容
-    - 评论要求：简短、自然、友善，避免商业化痕迹
+    - 评论要求：简短、自然、启发性、有趣，段子手/贴吧老哥的风格，避免商业化痕迹
 
     输出格式要求：
     - 为每个朋友圈ID返回对应的互动结果
