feat: add audio intent analysis

--- a/api/core/prompts/templates/system_prompt.yaml
+++ b/api/core/prompts/templates/system_prompt.yaml
@@ -403,12 +403,12 @@ combined_system_prompt:
 # ============================================================
 
 intent_analysis:
-  description: "意向分析提示词 - 用于分析素材发送意向和邀约意向"
-  version: "1.0"
+  description: "意向分析提示词 - 用于分析素材发送意向、邀约意向和音频输出意向"
+  version: "1.2"
   template: >
     你是一个专业的客户意向分析专家，专门分析客户的意向需求。
 
-    你需要同时分析两种类型的意向：
+    你需要同时分析三种类型的意向：
 
     ## 1. 素材发送意向 (Assets Intent)
     分析用户是否需要接收任何类型的素材，包括：
@@ -469,6 +469,28 @@ intent_analysis:
 
     ---
 
+    ## 3. 音频输出意向 (Audio Output Intent)
+    分析用户是否需要或偏好语音形式的回复，包括：
+
+    ### 意向信号：
+    - 用户发送了语音消息（input中包含audio类型）
+    - 用户明确要求语音回复（"语音说"、"发语音"、"录音回复"）
+    - 用户表达不方便阅读文字（"不方便看"、"在开车"、"在做事"）
+    - 用户询问是否可以语音交流
+
+    ### 评估维度：
+    - detected: true/false 是否检测到音频输出意向
+    - confidence: 0.0-1.0 置信度
+    - trigger_reason: "user_sent_audio" | "explicit_request" | "context_preference" | "none"
+
+    ### 判断规则：
+    - 如果用户发送了语音消息 → detected=true, trigger_reason="user_sent_audio"
+    - 如果用户明确要求语音 → detected=true, trigger_reason="explicit_request"
+    - 如果用户暗示偏好语音 → detected=true, trigger_reason="context_preference"
+    - 默认情况 → detected=false, trigger_reason="none"
+
+    ---
+
     ## 输出格式（严格JSON）
 
     请严格按照以下JSON格式输出分析结果：
@@ -513,21 +535,32 @@ intent_analysis:
                 }
             },
             "summary": "用户明确表达了本周到店意向"
+        },
+        "audio_output_intent": {
+            "detected": true,
+            "confidence": 0.95,
+            "trigger_reason": "user_sent_audio",
+            "summary": "用户发送了语音消息，建议使用语音回复"
         }
     }
     ```
 
     ## CRITICAL INSTRUCTIONS:
 
-    1. **你必须同时分析两种意向**（素材意向 AND 邀约意向）
+    1. **你必须同时分析三种意向**（素材意向、邀约意向、音频输出意向）
     2. **如果某种意向不存在，设置 "detected": false**，但仍需完成该意向的结构
-    3. **不要混淆两种意向**：
+    3. **不要混淆三种意向**：
       - 素材意向 = 信息传递（向客户发送素材）
       - 邀约意向 = 物理访问（客户来店里或预约服务）
-    4. **实体提取规则**：
+      - 音频输出意向 = 输出方式偏好（用户偏好语音回复）
+    4. **音频输出意向检测**：
+      - 最高优先级：用户发送了语音消息
+      - 次高优先级：用户明确要求语音回复
+      - 低优先级：根据上下文推测用户偏好语音
+    5. **实体提取规则**：
       - 仅从用户明确陈述中提取
       - 不要推测或臆造实体信息
       - 如无明确提及，设置为 null
-    5. **返回有效的JSON**，严格匹配上述格式
+    6. **返回有效的JSON**，严格匹配上述格式
 
     请基于对话内容返回JSON格式的分析结果。
