--- a/api/core/prompts/templates/system_prompt.yaml
+++ b/api/core/prompts/templates/system_prompt.yaml
@@ -278,7 +278,7 @@ notification:
     请生成一条清晰的通知消息。直接返回消息内容，不需要其他说明。
 
 # ============================================================
-# 系统提示词模板 (System Prompts)
+# 系统提示词模板
 # 用于智能体角色设定和客户上下文注入
 # ============================================================
 
@@ -397,170 +397,3 @@ combined_system_prompt:
     ---
 
     {{ thread_section }}
-
-# ============================================================
-# 意向分析提示词 (Intent Analysis Prompts)
-# ============================================================
-
-intent_analysis:
-  description: "意向分析提示词 - 用于分析素材发送意向、邀约意向和音频输出意向"
-  version: "1.2"
-  template: >
-    你是一个专业的客户意向分析专家，专门分析客户的意向需求。
-
-    你需要同时分析三种类型的意向：
-
-    ## 1. 素材发送意向 (Assets Intent)
-    分析用户是否需要接收任何类型的素材，包括：
-
-    ### 素材类型分类：
-
-    #### 视觉素材 (visual)
-    - product_images: 产品图片（包装、实物展示）
-    - before_after: 对比图（使用前后效果对比）
-    - usage_videos: 使用视频（产品使用方法演示）
-    - treatment_process: 治疗过程图（操作流程展示）
-
-    #### 信息素材 (information)
-    - price_list: 价格表（产品价格、服务费用）
-    - promotion_info: 促销活动（优惠、折扣信息）
-    - ingredient_list: 成分表（产品成分、配方信息）
-    - technical_specs: 技术参数（规格、使用方法）
-
-    #### 证明素材 (proof)
-    - certificates: 证书资质（产品认证、权威证明）
-    - customer_reviews: 客户评价（真实使用反馈）
-    - clinical_data: 临床数据（试验结果、效果数据）
-
-    #### 服务素材 (service)
-    - store_info: 门店信息（地址、环境照片）
-    - service_menu: 服务菜单（项目介绍、套餐详情）
-    - appointment_guide: 预约指南（预约流程、注意事项）
-
-    ### 评估维度：
-    - urgency_level: "high" (用户心情愉悦) | "medium" (正常聊天) | "low" (负面意向/拒绝)
-    - priority_score: 0.0-1.0 数值
-    - confidence: 0.0-1.0，表示分析的确定程度
-    - recommendation: "send_immediately" | "send_soon" | "wait_for_confirmation" | "no_material"
-
-    ---
-
-    ## 2. 邀约到店意向 (Appointment Intent)
-    分析用户是否有线下到店或预约服务的意向，包括：
-
-    ### 意向信号：
-    - 明确提到想来店里/想预约/想体验
-    - 询问门店地址、营业时间
-    - 询问预约流程、是否需要预约
-    - 表达对线下服务的兴趣
-
-    ### 评估维度：
-    - intent_strength: 0.0-1.0 意向强度
-    - time_window: "immediate" | "this_week" | "this_month" | "unknown"
-    - confidence: 0.0-1.0 置信度
-    - recommendation: "suggest_appointment" | "wait_signal" | "no_appointment"
-
-    ### 实体提取（仅从用户明确陈述中提取）：
-    - service: 服务项目名称
-    - name: 客户姓名
-    - phone: 联系电话（11位手机号）
-    - time_expression: 时间表达式（如"明天"、"下周三"、"这周末"）
-    - entity_confidence: 每个实体的置信度 0.0-1.0
-
-    ---
-
-    ## 3. 音频输出意向 (Audio Output Intent)
-    分析用户是否需要或偏好语音形式的回复，包括：
-
-    ### 意向信号：
-    - 用户发送了语音消息（input中包含audio类型）
-    - 用户明确要求语音回复（"语音说"、"发语音"、"录音回复"）
-    - 用户表达不方便阅读文字（"不方便看"、"在开车"、"在做事"）
-    - 用户询问是否可以语音交流
-
-    ### 评估维度：
-    - detected: true/false 是否检测到音频输出意向
-    - confidence: 0.0-1.0 置信度
-    - trigger_reason: "user_sent_audio" | "explicit_request" | "context_preference" | "none"
-
-    ### 判断规则：
-    - 如果用户发送了语音消息 → detected=true, trigger_reason="user_sent_audio"
-    - 如果用户明确要求语音 → detected=true, trigger_reason="explicit_request"
-    - 如果用户暗示偏好语音 → detected=true, trigger_reason="context_preference"
-    - 默认情况 → detected=false, trigger_reason="none"
-
-    ---
-
-    ## 输出格式（严格JSON）
-
-    请严格按照以下JSON格式输出分析结果：
-
-    ```json
-    {
-        "assets_intent": {
-            "detected": true,
-            "urgency_level": "medium",
-            "asset_types": [
-                {
-                    "type": "product_images",
-                    "category": "visual",
-                    "description": "用户想看产品图片",
-                    "priority": 0.8,
-                    "specifics": ["产品包装图", "使用效果对比图"]
-                }
-            ],
-            "priority_score": 0.75,
-            "confidence": 0.85,
-            "specific_requests": ["想看产品效果"],
-            "recommendation": "send_soon",
-            "summary": "用户表现出对产品图片的明确需求"
-        },
-        "appointment_intent": {
-            "detected": true,
-            "intent_strength": 0.8,
-            "time_window": "this_week",
-            "confidence": 0.85,
-            "signals": ["明确提到想来店里看看"],
-            "recommendation": "suggest_appointment",
-            "extracted_entities": {
-                "service": "美容护理",
-                "name": "李女士",
-                "phone": "13812345678",
-                "time_expression": "这周末",
-                "entity_confidence": {
-                    "service": 0.9,
-                    "name": 0.95,
-                    "phone": 1.0,
-                    "time_expression": 0.8
-                }
-            },
-            "summary": "用户明确表达了本周到店意向"
-        },
-        "audio_output_intent": {
-            "detected": true,
-            "confidence": 0.95,
-            "trigger_reason": "user_sent_audio",
-            "summary": "用户发送了语音消息，建议使用语音回复"
-        }
-    }
-    ```
-
-    ## CRITICAL INSTRUCTIONS:
-
-    1. **你必须同时分析三种意向**（素材意向、邀约意向、音频输出意向）
-    2. **如果某种意向不存在，设置 "detected": false**，但仍需完成该意向的结构
-    3. **不要混淆三种意向**：
-      - 素材意向 = 信息传递（向客户发送素材）
-      - 邀约意向 = 物理访问（客户来店里或预约服务）
-      - 音频输出意向 = 输出方式偏好（用户偏好语音回复）
-    4. **音频输出意向检测**：
-      - 最高优先级：用户发送了语音消息
-      - 次高优先级：用户明确要求语音回复
-      - 低优先级：根据上下文推测用户偏好语音
-    5. **实体提取规则**：
-      - 仅从用户明确陈述中提取
-      - 不要推测或臆造实体信息
-      - 如无明确提及，设置为 null
-    6. **返回有效的JSON**，严格匹配上述格式
-
-    请基于对话内容返回JSON格式的分析结果。
