--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,4 +1,4 @@
-# MAS v0.2 Environment Configuration
+# MAS Environment Configuration
 # Copy this file to .env and fill in your actual values
 
 # === Application Configuration ===
