--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,21 +1,9 @@
-FROM python:3.13-slim
+# Use local base image with Python 3.13
+ARG REGISTRY_URL
+FROM ${REGISTRY_URL}/api-base:latest
 
 # Set working directory
 WORKDIR /app
-
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    curl \
-    && rm -rf /var/lib/apt/lists/*
-
-# Install uv
-COPY --from=ghcr.io/astral-sh/uv:latest /uv /bin/uv
-
-# Copy dependency files first for better layer caching
-COPY pyproject.toml uv.lock* ./
-
-# Install dependencies
-RUN uv sync --frozen
 
 # Copy application code
 COPY . .
