fix: aligns with the prompts which expect the conversation to be analyzed

--- a/api/data/analysis_prompts.yaml
+++ b/api/data/analysis_prompts.yaml
@@ -8,7 +8,7 @@ profile_analysis:
   model: "qwen/qwen3-coder-flash"
   temperature: 0.7
   prompt: |
-    你是专业的用户画像分析专家。请基于上述聊天记录进行用户画像分析。
+    你是专业的用户画像分析专家。请基于历史聊天记录进行用户画像分析。
 
     [长期记忆]
     {memory_content}
@@ -60,7 +60,7 @@ label_generation:
   model: "qwen/qwen3-coder-flash"
   temperature: 0.7
   prompt: |
-    你是一个用户画像标签生成器。请根据对话历史和长期记忆，提取出最能代表该用户的 3-5 个关键标签，每个标签5个字以内。
+    你是一个用户画像标签生成器。请根据对话历史和长期记忆，提取出最能代表该用户的 3-5 个关键标签，每个标签1到5个字之间。
     标签应该简短、精准。你可以从以下维度中任意选择，核心是最能受益于销售进行分析的标签：
     MBTI性格分析
     个性情绪心理侧写
@@ -173,7 +173,7 @@ report_generation:
 
     ### 🚨 **角色识别规则**
     - **客户**：标记为【客户】的消息才是客户说的话
-    - **客服**：标记为【客服】的消息是客服说的话
+    - **员工**：标记为【员工】的消息是员工说的话
 
     ### 📋 **字段填写要求**
     - 系统计算的指标必须直接使用，不要修改
