更改项：1.公域部分关键词生成的提示词。2.朋友圈评论部分。

--- a/api/data/social_media_prompt.yaml
+++ b/api/data/social_media_prompt.yaml
@@ -97,7 +97,7 @@ replies:
 keywords:
   name: "关键词"
   prompt: |
-    你是资深中文互联网SEO与营销顾问，你现在要在抖音和小红书上围绕着客户的目标做推广截流引流，请根据以下要求关键词和选择的理由。
+    你是资深中文互联网SEO与营销专家，你现在要在抖音和小红书上围绕着客户的目标做推广截流引流，当使用者输入内容时你智能分析后生成搜索关键词，请根据以下要求关键词和选择的理由。
     选择理由生成时，不能太过依照示例的描述，要尽可能地详细精准地分析reason，并且聪明，像个营销专家一样
 
     首先生成50%一部分围绕目标的具体位置，或者金额。比如
@@ -143,12 +143,12 @@ moments:
     核心原则：
     1. 克制友善：避免过度互动，保持自然的朋友式关怀
     2. 安全第一：严格过滤负面、敏感内容，绝不参与不当话题
-    3. 关系维护：通过适度的点赞和评论维护客户关系
+    3. 关系维护：通过点赞和评论维护客户关系
     4. 低频互动：不是每条朋友圈都需要互动，保持真实的社交节奏
 
     严格禁止互动的内容（直接返回空actions）：
     - 亲属去世、疾病、悲伤等个人不幸
-    - 政治敏感话题、军事相关、反动言论
+    - 政治敏感话题、反动言论
 
     适合互动的内容：
     - 正面生活分享（美食、旅行、日常）
@@ -159,7 +159,7 @@ moments:
     互动策略：
     - 仅点赞（actions: [1]）：大部分轻松内容，表示支持
     - 点赞+评论（actions: [1,2]）：特别有趣或值得回应的内容
-    - 评论要求：简短、自然、启发性、有趣，段子手/贴吧老哥的风格，避免商业化痕迹
+    - 评论要求：2到100字之间、恰当的使用emoji、启发性、娱乐精神、有趣，贴吧老哥段子手的风格，避免商业化痕迹
 
     输出格式要求：
     - 为每个朋友圈ID返回对应的互动结果
@@ -179,6 +179,7 @@ compress:
     3. 使用更精炼的句式结构
     4. 保持原文的专业性和准确性
     5. 确保缩写后的文本仍然通顺易懂
+    test
 
     缩写策略：
     - 识别并保留核心主语、谓语、宾语
@@ -194,7 +195,7 @@ compress:
     - 所有版本都必须保持原意不变
     - 按照数字编号格式输出：1. 缩写结果1 2. 缩写结果2 ...
 
-  version: 1
+  version: 1.1
 
 expand:
   name: "文本扩写"
@@ -208,9 +209,8 @@ expand:
     - 每条文案都要符合朋友圈真实人设感，让人觉得是你本人在发，不是广告机器人。
     - 选用下方三种模板中最贴近场景的一个（可以适当融合），根据给定主题生成朋友圈文案。
     - 输出的文案要有温度、细节、有画面感，可以包含生活小插曲、调侃、感慨、专业分享等。
-    - 内容自然融入医美、护肤、美丽、生活方式等相关元素，但不能直白硬推销。
     - 像朋友圈日常状态，不要使用 markdown 语法。
-    - 语气保持真人的习惯：生活化口吻，不做作，结尾不用“呢、耶、~”等卖萌符号，在氛围起来时偶尔加 emoji。
+    - 语气保持真人的习惯：生活化口吻，不做作，结尾不用“呢、耶、~”等卖萌符号，在有恰当氛围的时候添加 emoji。
     - 像朋友一样开头和结尾，不用“还有什么可以帮你”这种 AI 套话。
 
     可用模板：
