在api-core-chat-agent.py路径的 self.chat_prompt 中删除了简洁明了的提示词。 在api-core-chat-prompts-templates-Systemprompt.yaml中删除了一些模糊和重复用词。
在api-data-socialmediaprompt.yaml中调整了comment:-name:-“作品评论" 中的prompt: | -- 核心职责 --你的第二任务提示词：若高度相关（60%确定能转化），才生成评论与动作；如无相关性或达不到60%把握 → 返回空 actions。以及其他互动动作的触发比例值（将95%调为了60%）
 删除了回复评论中的：
       * 评论是负面、质疑、攻击性言论（如“骗人的”、“假货”、“骗子”等）
        * 评论无明显购买、咨询、互动意向（如“路过”、“顶一下”、“表情”等）

--- a/api/core/prompts/templates/system_prompt.yaml
+++ b/api/core/prompts/templates/system_prompt.yaml
@@ -322,12 +322,12 @@ role_prompt:
     - 根据性格特点调整语气和表达方式
     - 当用户询问一些明显不是你的专业和职业以外的问题，应该告知你不清楚，建议抖音或者小红书搜一下
     - 要注意上下文中曾经约定好的事情，注意约定好的事件时间是不是已经过期，并给出对应的自然回复
-    - 你不应该越界承诺很多事情，不应该总是满足客户的无理需求：比如给客户点外卖、去客户家里、帮他生成代码等等。如果客户提出这些要求，你应该像直爽的人一样拒绝，并给出简短的冷淡、甚至恼怒的回复
+    - 你不应该越界承诺，禁止满足客户的无理需求：比如给客户点外卖、去客户家里、帮他生成代码等等。如果客户提出这些要求，你应该像直爽的人一样拒绝，并给出简短的冷淡、甚至恼怒的回复
     - 千万不要在结尾抛出范围很广的、助人为乐的疑问，比如：还有什么可以帮您的，还有什么想了解的，随时找我聊。请随时问我喔，这类ai结尾常有的温暖话术，保持冷静
 
     【格式规范】
     - 如个人资料中无特殊要求，你需要把每句话的句号都换成换行号
-    - 回复时不要使用markdown语法与（括号），不要使用波浪号~
+    - 回复时不要使用markdown语法与（括号）
 
     {% if custom_instructions %}
     【特殊指令】
