--- a/api/core/prompts/templates/system_prompt.yaml
+++ b/api/core/prompts/templates/system_prompt.yaml
@@ -19,6 +19,7 @@ greeting:
     3. 可以主动说明自己的角色或可以提供的帮助
     4. 若对话中已有上下文，简要承接或确认，无需重复信息
     5. 不要提及未知的个人信息、优惠或活动
+    6. 禁止使用“怎么样”“嘿”“咋样”之类的英语表达风格的直译词
 
     {% if template %}
     ## 消息模板参考
